# tutor-notes

./: .gitlab-ci.yml  .hatch_build.py  CHANGELOG.md  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.py
.github/workflows/: sync.yml  test.yml
changelog.d/: 20230731_075900_jhony.avella_remove_permissions_container.md  20241017_233457_regis_meilisearch.md  20241022_103249_jhony.avella_ubuntu_24_04.md  20241114_112459_regis_fix_dev_cors.md  20250915_115717_dawoud.sheraz_ruff_migration.md  20251214_173045_eemaanamir_remove_hatch_definition.md  20260415_182143_ali.abbas02_python_version_upgrade.md  scriv.ini
tutornotes/: __about__.py  plugin.py
tutornotes/patches/: caddyfile  common-env-features  k8s-deployments  k8s-jobs  k8s-services  lms-env-features  local-docker-compose-dev-services  local-docker-compose-jobs-services  local-docker-compose-permissions-command  local-docker-compose-permissions-volumes  local-docker-compose-services  nginx-extra  openedx-common-settings  openedx-lms-common-settings  openedx-lms-development-settings  openedx-lms-production-settings
tutornotes/templates/notes/apps/settings/: tutor.py
tutornotes/templates/notes/hooks/lms/: init
tutornotes/templates/notes/hooks/mysql/: init
tutornotes/templates/notes/tasks/notes/: init
