# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# https://hatch.pypa.io/latest/config/build/

[project]
name = "tutor-notes"
description = "A Tutor plugin for student notes"
authors = [
  { name = "Edly" },
  { email = "hello@edly.io"},
]
maintainers = [
  { name = "Jhony Avella" },
  { email = "jhony.avella@edunext.co" },
]
license = {text = "AGPL-3.0-only"}
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
  "tutor>=21.0.0,<22.0.0",
]

dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "tutor[dev]>=21.0.0,<22.0.0",
    "ruff"
]


# https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels
[project.urls]
Homepage = "https://docs.tutor.edly.io/"
Documentation = "https://github.com/overhangio/tutor-notes#readme"
Issues = "https://github.com/overhangio/tutor-notes/issues"
Source = "https://github.com/overhangio/tutor-notes"
Changelog = "https://github.com/overhangio/tutor-notes/blob/release/CHANGELOG.md"
Community = "https://discuss.openedx.org/tag/tutor"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "tutornotes/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["tutornotes"]

[tool.hatch.build.targets.sdist]
# Disable strict naming, otherwise twine is not able to detect name/version
strict-naming = false
include = [ "/tutornotes",]
exclude = ["tests*"]

[project.entry-points."tutor.plugin.v1"]
notes = "tutornotes.plugin"

[tool.ruff]
exclude = ["templates", "docs/_ext"]

[tool.ruff.lint]
# E: pycodestyle errors
# I: isort
# N: pep8-naming
select = ["E", "I", "N"]

# F401: unused-import
# F841: unused-variable
# W292: missing-newline-at-end-of-file
extend-select = ["F401", "F841", "W292"]

[tool.ruff.format]
# Default config is automatically taken from https://docs.astral.sh/ruff/configuration/
